--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -100,15 +100,15 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="control-label col-md-3">Etiquetas:</label>
+					<div class="form-group"  ng-repeat="(familia,etiquetas) in etiquetasPorTipo track by $index">
+						<label class="control-label col-md-3">{{familia}}:</label>
 						<div class="col-md-9">
-							<div ng-repeat="etiqueta in etiquetas track by $index" class="col-md-12">
+							<div ng-repeat="etiqueta in etiquetas track by $index" class="col-md-6">
 								<label class="control-label col-md-3">
 									<input type="checkbox" name="" id="et{{$index}}" value="{{etiqueta._id}}" >
 								</label>
 								<div class="col-md-9">
-									<label for="et{{$index}}"> <span class="label label-danger"  style="color:{{etiqueta.color}}" title="{{etiqueta.descripcion}}" >{{etiqueta._id}}</span></label>
+									<label for="et{{$index}}"> <span class="label label-danger" title="{{etiqueta.descripcion}}" >{{etiqueta._id}}</span></label>
 								</div>
 							</div>
 						</div>
