--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -84,7 +84,7 @@
 			</div>
 			<div ng-class="{'hidden': filtrosocultos}" class="panel-body">
 				<form class="form-horizontal">
-					<div ng-repeat="key in camposfiltros" class="form-group">
+					<div ng-repeat="key in camposfiltros" class="form-groupcol-sm-12">
 						<label class="control-label col-md-3">
 							{{key| translate}}:
 						</label>
@@ -93,21 +93,21 @@
 							</select>
 						</div>
 					</div>
-					<div class="form-group">
+					<div class="form-groupcol-sm-12">
 						<label class="control-label col-md-3">Filtro:</label>
 						<div class="col-md-9">
 							<input ng-model="filtrotxtprocedimiento.$" class="form-control"/>
 						</div>
 					</div>
 
-					<div class="form-group"  ng-repeat="(familia,etiquetas) in etiquetasPorTipo track by $index">
-						<label class="control-label col-md-3">{{familia}}:</label>
-						<div class="col-md-9">
-							<div ng-repeat="etiqueta in etiquetas track by $index" class="col-md-6">
-								<label class="control-label col-md-3">
+					<div class="form-group col-sm-12"  ng-repeat="(familia,etiquetas) in etiquetasPorTipo track by $index" >
+						<label class="control-label col-sm-3">{{familia}}:</label>
+						<div class="col-sm-9">
+							<div ng-repeat="etiqueta in etiquetas track by $index" class="col-sm-6">
+								<label class="control-label col-sm-3">
 									<input type="checkbox" name="" id="et{{$index}}" value="{{etiqueta._id}}" >
 								</label>
-								<div class="col-md-9">
+								<div class="col-sm-9">
 									<label for="et{{$index}}"> <span class="label label-danger" title="{{etiqueta.descripcion}}" >{{etiqueta._id}}</span></label>
 								</div>
 							</div>
