--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -153,7 +153,7 @@
 			</div>
 		</div>
 	</div>
-	<div ng-if="show_details_permiso">
+	<div ng-if="show_details_permiso" ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" >
 		<table class="table table-striped table-bordered table-condensed table-hover">
 			<thead></thead>
 			<tbody>Detalles de los permisos del usuario/plaza seleccionados. TO DO.</tbody>
@@ -162,7 +162,7 @@
 	</div>
 	<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" ng-if="!show_details_permiso">
 		<table class="table table-striped table-bordered table-condensed table-hover">
-			<caption>Permisos</caption>
+			<!--<caption>Permisos</caption>-->
 			<thead>
 				<tr>
 					<th colspan="{{ !is_show_recursive_users && !procedimientos.length ? 7 : 8 }}">
@@ -190,38 +190,40 @@
 						<form name="nuevousuario-form" id="nuevousuario-form">
 							<label for="login"  style="width:100%">
 								<div class="input-group">
-									<input type="text" name="login" class="form-control" placeholder="Login carm" ng-model="logincarm" onchange="clear_searched_login_plaza()"/>
+									<input type="text" name="login" class="form-control" placeholder="Login carm" ng-model="logincarm" ng-keydown="login_clear_searched_login_plaza()"/>
 									<span class="input-group-addon">@carm.es</span>
 								</div>
 							</label>
 							<br/>
 							<label for="plaza" style="width:100%">
-								<input type="text" name="plaza" class="form-control" placeholder="C&oacute;digo plaza" ng-model="plaza"  onchange="clear_searched_login_plaza()"/>
+								<input type="text" name="plaza" class="form-control" placeholder="C&oacute;digo plaza" ng-model="plaza"  ng-keydown="plaza_clear_searched_login_plaza()"/>
 							</label>
 							<br/>
 							<button type="button" class="btn btn-default" ng-click="search_login_plaza()">
 							  <span class="glyphicon glyphicon-search"></span> Buscar usuario
 							</button>											
-							<div ng-if="searched_login_plaza() && not_found_login_plaza()">
+							<div ng-if="searched_login_plaza() && not_found_login_plaza() && superuser()">
 								<br/>
-								<label name="buscado_nombre">
-									<span>Nombre: </span><input  class="form-control" type="text" ng-model="buscado_nombre" name="buscado_nombre" /> 
+								<span><strong>Puede asociar una nueva persona al nuevo permiso.</strong></span>
+								<br/>
+								<label name="nombre">
+									<span>Nombre: </span><input  class="form-control" type="text" ng-model="buscado_nombre" name="nombre" /> 
 								</label>
 								<br/>
-								<label name="buscado_apellidos">
-									<span>Apellidos: </span><input  class="form-control" type="text" ng-model="buscado_apellidos" name="buscado_apellidos" /> 
+								<label name="apellidos">
+									<span>Apellidos: </span><input  class="form-control" type="text" ng-model="buscado_apellidos" name="apellidos" /> 
 								</label>
 								<br/>
-								<label name="buscado_genero">
+								<label name="genero">
 									<span>G&eacute;nero: </span>
-									<select ng-model="buscado_genero" name="buscado_genero" class="form-control" >
+									<select ng-model="buscado_genero" name="genero" class="form-control" >
 										<option value="Hombre">Hombre</option>
 										<option value="Mujer">Mujer</option>
 									</select>									
 								</label>
 								<br/>
-								<label name="buscado_telefono">
-									<span>Telefono: </span><input type="text" ng-model="buscado_telefono" name="buscado_telefono" class="form-control"  /> 
+								<label name="telefono">
+									<span>Telefono: </span><input type="text" ng-model="buscado_telefono" name="telefono" class="form-control"  /> 
 								</label>
 							</div>
 							<input type="hidden" name="procedimiento" value="{{procedimiento_seleccionado.codigo || 0}}" />
@@ -233,22 +235,18 @@
 							<br/>
 							<br/>
 							<label name="grantoption">
-								<input type="checkbox" ng-model="grantoption" name="grantoption" ng-disabled="!plaza || !logincarm"/> Puede conceder permisos
+								<input type="checkbox" ng-model="grantoption" name="grantoption" ng-disabled="!searched_login_plaza()" value="1"/> Puede conceder permisos
 							</label>
 							<br/>
-							<label name="grantoption">
-								<input type="checkbox" ng-model="w_option" name="w_option" ng-disabled="!plaza || !logincarm" /> Puede introducir datos
+							<label name="w_option">
+								<input type="checkbox" ng-model="w_option" name="w_option" ng-disabled="!searched_login_plaza()" value="1" /> Puede introducir datos
 							</label>
 							<br class="clear"/>
-							<button class="btn btn-default danger" ng-disabled="!plaza || !logincarm" ng-click="crearpermiso()" ng-disabled="searched_login_plaza()"><span>Crear</span></button>								
+							<button class="btn btn-default danger" ng-disabled="!searched_login_plaza()" ng-click="crearpermiso()" ><span>Crear</span></button>								
 						</form>
 					</th>
 				</tr>
-				<tr ng-if="show_details_permiso">
-					<th colspan="{{ !is_show_inherited_users && !is_show_recursive_users && !procedimientos.length? 7 : 8 }}">
-						
-					</th>
-				</tr>				
+				
 				<tr>
 					<th>Usuario</th>
 					<th>
@@ -256,7 +254,7 @@
 						<span class="hidden-lg hidden-md">Plaza</span>
 					</th>
 					<th ng-if="is_show_recursive_users || is_show_inherited_users || procedimientos.length">
-						Objeto
+						Procedimiento <!-- Objeto -->
 					</th>
 					<th>
 						<span class="visible-lg visible-md hidden-sm hidden-xs">Responsable</span>
@@ -278,12 +276,22 @@
 					</th>
 					<th></th>
 				</tr>
-			</thead>
+			</thead>			
 			<tbody ng-if="permisos.length || procedimientos.length " >				
+				<tr ng-if="show_details_permiso">
+					<th colspan="{{ !is_show_inherited_users && !is_show_recursive_users && !procedimientos.length? 7 : 8 }}">
+						
+					</th>
+				</tr>			
 				<tr ng-repeat="permiso in permisos" ng-if="permisos.length" ng-init="objetopermiso=getObjetoPermiso(permiso)">
 					<td>{{permiso.login}}</td>
 					<td>{{permiso.codplaza}}</td>
-					<td ng-if="is_show_recursive_users || is_show_inherited_users || procedimientos.length">{{objetopermiso.nombre}}</td>
+					<td ng-if="is_show_recursive_users || is_show_inherited_users || procedimientos.length">
+						<ul ng-if="objetopermiso && objetopermiso.length">
+							<li ng-repeat="obj in objetopermiso">{{obj.nombre}}</li>
+						<ul>
+						<span ng-if="objetopermiso && !objetopermiso.length">objetopermiso.nombre</span>
+					</td>
 					<td><span class="burdeos glyphicon glyphicon-remove"></span></td>
 					<td style="color:gray"><span class="glyphicon" ng-class="{'glyphicon-ok':isR(permiso),'glyphicon-remove':!isR(permiso)}"></span></td>
 					<td><a ng-click="changeW(permiso)" href=""><span class="glyphicon" ng-class="{'glyphicon-ok green':isW(permiso),'glyphicon-remove burdeos':!isW(permiso)}"></span></a></td>					
