Actualizar mediante fichero

--- a/public/partials/upload.html
+++ b/public/partials/upload.html
@@ -53,6 +53,12 @@
 												{{aviso}}
 											</li>
 										</ul>
+										<span class="btn btn-default" ng-click="confirm(respuesta)" title="Confirmar el cambio">
+											<span class="glyphicon glyphicon-ok"></span>
+										</span>
+										<span class="btn btn-default" ng-click="remove(respuesta)" title="Eliminar subida">
+											<span class="glyphicon glyphicon-remove"></span>
+										</span>
 									</th>
 								</tr>
 							</tfoot>
