--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,7 +1,7 @@
 <div style="background-repeat:no-repeat; background-size:cover; background-position:center center" class="login">
 	<div id="logincontainer" class="loginContainer">
-		<h1>Identificaci&oacute;n</h1>
-		<form name="loginForm" ng-submit="login(credentials)" novalidate="novalidate">
+		<h2 style="text-align:center">Identificaci&oacute;n</h2>
+		<form name="loginForm" ng-submit="login(credentials)" novalidate="novalidate" ng-If="!$root.loginCarm">
 			<label for="username" class="form-label">
 				<input id="username" autocomplete="on" type="text" name="username" placeholder="Usuario" ng-model="credentials.username" class="topcoat-text-input full"/>
 			</label>
@@ -9,9 +9,20 @@
 				<input id="password" autocomplete="off" type="password" name="password" placeholder="Contraseña" ng-model="credentials.password" class="topcoat-text-input full"/>
 			</label>
 			<div>
-				<button style="text-align: center;" class="topcoat-button full text-center">Entrar				</button>
+				<button style="text-align: center;" class="topcoat-button full text-center">Entrar</button>
 			</div>
 		</form>
+		<div ng-If="$root.loginCarm">
+			<p>Es necesario autenticarse vía servicio de autenticación CAS de la CARM. Para ello pulse en el botón de debajo, autentíquese y será redirigido otra vez a esta página. Pulse de nuevo en el botón y accederá al sistema.</p>
+			<p>
+				Si hubiera algún problema de autenticación es posible que deba cerrar la sesión usando este
+				<a target="_blank" href="https://sso.carmpru.es/jsso/logout">enlace</a>.
+			</p>
+			<div>
+				<button ng-click="login(credentials)" style="text-align: center" class="topcoat-button full text-center">Entrar</button>
+			</div>
+
+		</div>
 		<p style="text-align:center" ng-if="mensaje" class="alert alert-danger">{{mensaje}}</p>
 	</div>
 	<div style="position:absolute; bottom:1em;right:1em; width:350px; height:350px;{{imagen}};background-repeat:no-repeat; background-size:contain; background-position:center center"></div>
