Remove debug messages

--- a/public/partials/logout.html
+++ b/public/partials/logout.html
@@ -1,3 +1,4 @@
 <div style="background-repeat:no-repeat; background-size:cover; background-position:center center" class="login">
 Sesión cerrada.
 </div>
+<img src="https://sso.carmpru.es/jsso/logout" style="height:0px;width:0px;" />
