--- a/public/partials/logout.html
+++ b/public/partials/logout.html
@@ -2,3 +2,4 @@
 Sesión cerrada.
 </div>
 <img src="https://sso.carmpru.es/jsso/logout" style="height:0px;width:0px;" />
+<!-- no quitar esta imagen, sirve para eliminar la sesión -->
