--- a/public/partials/procedimientocrud.html
+++ b/public/partials/procedimientocrud.html
@@ -75,17 +75,15 @@
 		
 		<div class="panel panel-danger">
 			<div class="panel-heading">
-				<h3 class="panel-title">{{accion}} procedimiento</h3>
+				<h3 class="panel-title">{{(guardado?'Actualizar':'Crear')}} procedimiento</h3>
 			</div>
-			<div class="panel-body">
-				<div class="btn-group">					
-				</div>
+			<div class="panel-body">			
 				<label name="nombre" style="width:100%">
-					<span>Denominaci&oacute;n: </span><input  class="form-control" type="text" ng-model="nombre" name="nombre" /> 					
+					<span>Denominaci&oacute;n: </span><input  class="form-control" type="text" ng-model="procedimiento.denominacion" name="nombre" /> 					
 				</label>
 				<br/>
 				<label name="codigo" style="width:100%">
-					<span>C&oacute;digo: </span><input  class="form-control" type="text" ng-model="codigo" name="codigo" /> 
+					<span>C&oacute;digo: </span><input  class="form-control" type="text" ng-model="procedimiento.codigo" name="codigo" /> 
 				</label>
 				<br/>
 				<label name="responsable" style="width:100%"> 
@@ -95,43 +93,15 @@
 					<span>Procedimiento padre: </span>
 					<input  placeholder="Introduce cualquier parte del c&oacute;digo o denominaci&oacute;n" class="form-control" type="text" ng-model="padre" name="padre" typeahead="procpadre.denominacion for procpadre in oallprocedimientos  | filter:{denominacion:$viewValue} | limitTo:10" /> 
 				</label>
+				<br/>
+				<button type="button" class="btn btn-default" ng-click="guardar()">
+					<span class="glyphicon glyphicon-floppy-disk"></span> {{ (guardado?'Actualizar':'Crear') }}
+				</button>				
 			</div>
 		</div>
-			<table class="table table-striped table-bordered table-condensed table-hover" id="procedimientostable">
-				<thead>
-					<tr>
-						<th>Progreso</th>
-						<th ng-class="{danger:orderby=='codigo' }" ng-click="reverse=!reverse;orderby='codigo'">{{'codigo'|translate}}</th>
-						<th ng-class="{danger:orderby=='denominacion' }" ng-click="reverse=!reverse;orderby='denominacion'">{{'denominacion'|translate}}</th>
-						<th ng-class="{danger:orderby=='cod_plaza' }" ng-click="reverse=!reverse;orderby='cod_plaza'">{{'cod_plaza'|translate}}</th>
-						<th ng-class="{danger:orderby=='ancestro' }" ng-click="reverse=!reverse;orderby='ancestro'">{{'A cargo de'|translate}}</th>
-						<th ng-class="{danger:orderby=='periodos[anualidad].totalsolicitudes' }" ng-click="reverse=!reverse;orderby='periodos[anualidad].totalsolicitudes'">Solicitudes {{anualidad}}</th>
-						<th ng-class="{danger:orderby=='periodos[anualidad].solicitados[mesanterior]' }" ng-click="reverse=!reverse;orderby='periodos[anualidad].solicitados[mesanterior]'">Solicitudes {{meses[mesanterior]}}</th>
-					</tr>
-				</thead>
-				<tfoot>
-					<tr>
-						<td colspan="7">
-							<strong>Nº de procedimientos listados:</strong>
-							{{procedimientosfiltrados.length}}
-							<span ng-click="$root.exportXLS('procedimientostable','procedimientos')" class="pull-right glyphicon glyphicon-floppy-disk"></span>
-						</td>
-					</tr>
-				</tfoot>
-				<tbody>
-					<tr ng-repeat="proc in procedimientosfiltrados |filter:filtrotxtprocedimiento | orderBy : orderby : reverse">
-						<td class="text-center"><span class="sparkline">{{proc.periodos[anualidad].solicitados | json}}</span></td>
-						<th class="text-center">{{proc.codigo}}</th>
-						<td><a href="/procedimiento/{{proc.codigo}}">{{proc.denominacion}}</a></td>
-						<td class="text-center">{{proc.cod_plaza}}</td>
-						<td class="text-center"><a href="/actividad/{{proc.ancestros[ 0 ].id}}">{{proc.ancestros.length==0 ? '' : proc.ancestros[ 0 ].nombrelargo}}</a></td>
-						<td class="text-right">{{proc.periodos[anualidad].totalsolicitudes}}</td>
-						<td class="text-right">{{proc.periodos[anualidad].solicitados[mesanterior]}}</td>
-					</tr>
-				</tbody>
-			</table>
+			
 
 		</div>
 	</div>
-</div>
+
 
