--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -1,24 +1,7 @@
 
-<style type="text/css">
-<!--
-	.tree_leaft_crud {
-		font-style:italic;
-	}
-	.tree_leaft_crud_tools {
-		
-	}
-	a.addPermiso {
-		background-color:green;
-		color:white;
-	}
-	
-	a.addPermiso:hover {
-		background-color:white;
-		color:green;
-	}-->
-</style>
+
 <div ng-controller="PermisoCtrl" class="row">
-<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
+	<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
 		<div class="panel panel-danger">
 			<div class="panel-heading">
 				<div class="input-group">
@@ -188,11 +171,11 @@
 				<tr ng-if="show_form_add_permiso">
 					<h2 class="center">Permisos</h2>
 					<th colspan="{{ !is_show_recursive_users && !procedimientos.length? 7 : 8 }}" class="form-container">						
-						<form name="nuevousuario-form" id="nuevousuario-form">
-							<label name="responsable" style="width:100%" ng-if="!is_nuevousuario"> 
-								<input  class="form-control" placeholder="Buscar por llaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)" ng-model="usuarioseleccionado" name="usuario" /> 
-							</label>
-							<br/>
+						<form name="nuevousuario-form" id="nuevousuario-form" ng-init="usuarioseleccionado=''">
+								<input  class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por llaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 
+							
+							
+							<!--<br/>
 							<button type="button" class="btn btn-default" ng-click="crearnuevousuario()" ng-if="!is_nuevousuario">
 							  <span class="glyphicon glyphicon-search"></span> Nuevo usuario
 							</button>											
@@ -234,7 +217,7 @@
 								<button type="button" class="btn btn-default" ng-click="cancelarnuevousuario()">
 									<span class="glyphicon glyphicon-remove"></span> Cancelar
 								</button>								
-							</fieldset>
+							</fieldset>-->
 							<input type="hidden" name="procedimiento" value="{{procedimiento_seleccionado.codigo || 0}}" />
 							<input type="hidden" name="nodojerarquia" value="{{seleccionado.id || 0}}" />
 							<input type="hidden" name="tiposeleccion" value="{{seleccionado_organica?'jerarquia':'procedimiento'}}" />
@@ -243,18 +226,23 @@
 							</div>
 							<br/>
 							<br/>
-							<label name="grantoption">
-								<input type="checkbox" ng-model="grantoption" name="grantoption" ng-disabled="is_nuevousuario || !usuarioseleccionado" value="1"/> Puede conceder permisos
+							<label for="propietario" ng-if="!seleccionado_organica">
+								<input type="checkbox" ng-model="propietario" name="propietario" ng-disabled="is_nuevousuario " value="1"/> Es propietario del procedimiento
+							</label>							
+							<br/>
+							<label for="grantoption">
+								<input type="checkbox" ng-model="grantoption" name="grantoption" ng-disabled="is_nuevousuario || propietario" value="1"/> Puede conceder permisos
 							</label>
 							<br/>
-							<label name="w_option">
-								<input type="checkbox" ng-model="w_option" name="w_option" ng-disabled="is_nuevousuario || !usuarioseleccionado" value="1" /> Puede introducir datos
+							<label for="w_option">
+								<input type="checkbox" ng-model="w_option" name="w_option" ng-disabled="is_nuevousuario || propietario" value="1" /> Puede introducir datos
 							</label>
 							<br/>
-							<label name="p_superuser" ng-if="$root.superuser()">
-								<input type="checkbox" ng-model="psuperuser" name="p_superuser" ng-disabled="is_nuevousuario || !usuarioseleccionado" value="1" /> Superusuario
+							<label for="p_superuser" ng-if="$root.superuser()">
+								<input type="checkbox" ng-model="psuperuser" name="p_superuser" ng-disabled="is_nuevousuario  || propietario" value="1" /> Superusuario
 							</label>							
 							<br class="clear"/>
+							
 							<button class="btn btn-default danger" ng-disabled="is_nuevousuario" ng-click="crearpermiso(usuarioseleccionado)" ><span>Crear</span></button>								
 						</form>
 					</th>
@@ -355,8 +343,6 @@
 				</tr>
 			</tbody>
 		</table>
-
 	</div>
 </div>
-
 
