--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -1,12 +1,28 @@
 
 
 <div ng-controller="PermisoCtrl" class="row">
+<div id="normaluser" ng-if="!superuser">
+	<div class="col-lg-12" class="left animated">
+		<div class="panel panel-danger">
+			<div class="panel-heading">
+				<div class="input-group">
+				  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+					<input  class="form-control" ng-model="normal_user_usuariodelegado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 					
+				</div>				
+				<br/>
+				<button class="btn btn-default danger" ng-disabled="!normal_user_usuariodelegado" ng-click="delegar(normal_user_usuariodelegado)" ><span>Delegar</span></button>	
+			</div>
+		</div>	
+	</div>
+</div>
+<div id="superuser" ng-if="!superuser">
 	<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
 		<div class="panel panel-danger">
 			<div class="panel-heading">
 				<div class="input-group">
 				  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-				  <autocomplete class="form-control" ng-class="form-control" ng-model="persona_o_plaza" attr-placeholder="Buscar usuario por login o plaza..." click-activation="true" data="personas_plazas" on-select="showDetailsPermiso" ></autocomplete> 						
+				 <!-- <autocomplete class="form-control" ng-class="form-control" ng-model="persona_o_plaza" attr-placeholder="Buscar usuario por login o plaza..." click-activation="true" data="personas_plazas" on-select="showDetailsPermiso" ></autocomplete> 						-->
+					<input  class="form-control" ng-model="usuariosbuscado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 				 
 				</div>				
 			</div>
 		</div>
@@ -172,7 +188,7 @@
 					<h2 class="center">Permisos</h2>
 					<th colspan="{{ !is_show_recursive_users && !procedimientos.length? 7 : 8 }}" class="form-container">						
 						<form name="nuevousuario-form" id="nuevousuario-form" ng-init="usuarioseleccionado=''">
-								<input  class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por llaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 
+								<input  class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 
 							
 							
 							<!--<br/>
