--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -1,21 +1,7 @@
 
 
 <div ng-controller="PermisoCtrl" class="row">
-<div id="normaluser" ng-if="!superuser">
-	<div class="col-lg-12" class="left animated">
-		<div class="panel panel-danger">
-			<div class="panel-heading">
-				<div class="input-group">
-				  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-					<input  class="form-control" ng-model="normal_user_usuariodelegado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 					
-				</div>				
-				<br/>
-				<button class="btn btn-default danger" ng-disabled="!normal_user_usuariodelegado" ng-click="delegar(normal_user_usuariodelegado)" ><span>Delegar</span></button>	
-			</div>
-		</div>	
-	</div>
-</div>
-<div id="superuser" ng-if="!superuser">
+<div id="superuser" ng-if="$root.grantoption">
 	<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
 		<div class="panel panel-danger">
 			<div class="panel-heading">
@@ -190,7 +176,6 @@
 						<form name="nuevousuario-form" id="nuevousuario-form" ng-init="usuarioseleccionado=''">
 								<input  class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 
 							
-							
 							<!--<br/>
 							<button type="button" class="btn btn-default" ng-click="crearnuevousuario()" ng-if="!is_nuevousuario">
 							  <span class="glyphicon glyphicon-search"></span> Nuevo usuario
@@ -236,30 +221,32 @@
 							</fieldset>-->
 							<input type="hidden" name="procedimiento" value="{{procedimiento_seleccionado.codigo || 0}}" />
 							<input type="hidden" name="nodojerarquia" value="{{seleccionado.id || 0}}" />
-							<input type="hidden" name="tiposeleccion" value="{{seleccionado_organica?'jerarquia':'procedimiento'}}" />
-							<div ng-if="searched_login_plaza() && !not_found_login_plaza()">
-								<span><i>Encontradas {{ personas_encontradas.length } personas</i></span>
+							<input type="hidden" name="tiposeleccion" value="{{seleccionado_organica?'jerarquia':'procedimiento'}}" />		
+							<br/>							
+							<div ng-if="$root.superuser">							
+								<label for="propietario" ng-if="!seleccionado_organica && procedimiento_seleccionado">
+									<input type="checkbox" ng-model="propietario" name="propietario" ng-disabled="  !usuarioseleccionado " value="1"/> Es propietario del procedimiento
+								</label>							
+								<br/>
+								<label for="grantoption">
+									<input type="checkbox" ng-model="grantoption" name="grantoption" ng-disabled=" !usuarioseleccionado || propietario" value="1"/> Puede conceder permisos
+								</label>
+								<br/>
+								<label for="w_option">
+									<input type="checkbox" ng-model="w_option" name="w_option" ng-disabled="  !usuarioseleccionado || propietario" value="1" /> Puede introducir datos
+								</label>
+								<br/>
+								<label for="p_superuser" ng-if="$root.superuser()">
+									<input type="checkbox" ng-model="psuperuser" name="p_superuser" ng-disabled=" !usuarioseleccionado  || propietario" value="1" /> Superusuario
+								</label>							
+								<br class="clear"/>
+								
+								<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="crearpermiso(usuarioseleccionado)" ><span class="glyphicon glyphicon-ok"></span> <span>Crear</span></button>									
+								 &nbsp;<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" ><span class="glyphicon glyphicon-share"></span> <span>Delegar permisos</span></button>	
 							</div>
-							<br/>
-							<br/>
-							<label for="propietario" ng-if="!seleccionado_organica">
-								<input type="checkbox" ng-model="propietario" name="propietario" ng-disabled="is_nuevousuario " value="1"/> Es propietario del procedimiento
-							</label>							
-							<br/>
-							<label for="grantoption">
-								<input type="checkbox" ng-model="grantoption" name="grantoption" ng-disabled="is_nuevousuario || propietario" value="1"/> Puede conceder permisos
-							</label>
-							<br/>
-							<label for="w_option">
-								<input type="checkbox" ng-model="w_option" name="w_option" ng-disabled="is_nuevousuario || propietario" value="1" /> Puede introducir datos
-							</label>
-							<br/>
-							<label for="p_superuser" ng-if="$root.superuser()">
-								<input type="checkbox" ng-model="psuperuser" name="p_superuser" ng-disabled="is_nuevousuario  || propietario" value="1" /> Superusuario
-							</label>							
-							<br class="clear"/>
-							
-							<button class="btn btn-default danger" ng-disabled="is_nuevousuario" ng-click="crearpermiso(usuarioseleccionado)" ><span>Crear</span></button>								
+							<div ng-if="!$root.superuser">
+								&nbsp;<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" ><span class="glyphicon glyphicon-share"></span> <span>Delegar permisos</span></button>	
+							</div>
 						</form>
 					</th>
 				</tr>
