--- a/public/partials/etiqueta.html
+++ b/public/partials/etiqueta.html
@@ -5,6 +5,7 @@
 				<thead>
 					<tr>
 						<th>Etiqueta</th>
+						<th>Familia</th>
 						<th>Descripción</th>
 						<th>Color</th>
 						<th>Operaciones</th>
