--- a/public/partials/periodos.html
+++ b/public/partials/periodos.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-12">
 		<div style="clear:both" class="table-responsive">
 			<h3>Períodos cerrados</h3>
-			<table class="table table-striped" ng-If="$root.superuser()">
+			<table class="table table-striped" ng-If="$root.permisoscalculados.superuser">
 				<thead>
 					<tr>
 						<th></th>
