--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -1,14 +1,14 @@
 
 
 <div ng-controller="PermisoCtrl" class="row">
-<div id="superuser" ng-if="$root.permisoscalculados.grantoption">
+<div id="superuser" ng-if="$root.permisoscalculados.grantoption || $root.permisoscalculados.superuser">
 	<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
-		<div class="panel panel-danger">
+		<div class="panel panel-danger" ng-if="$root.permisoscalculados.superuser">
 			<div class="panel-heading">
 				<div class="input-group">
 				  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
 				 <!-- <autocomplete class="form-control" ng-class="form-control" ng-model="persona_o_plaza" attr-placeholder="Buscar usuario por login o plaza..." click-activation="true" data="personas_plazas" on-select="showDetailsPermiso" ></autocomplete> 						-->
-					<input  class="form-control" ng-model="usuariosbuscado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 				 
+					<input  class="form-control" ng-model="usuariosbuscado" typeahead-on-select="on_usuariobuscado_selected($item,$model,$label)" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 				 
 				</div>				
 			</div>
 		</div>
@@ -139,13 +139,100 @@
 		</div>
 	</div>
 	<div ng-if="show_details_permiso" ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" >
+		<h2 class="center">Permisos</h2>
 		<table class="table table-striped table-bordered table-condensed table-hover">
-			<thead></thead>
-			<tbody>Detalles de los permisos del usuario/plaza seleccionados. TO DO.</tbody>
+			<thead>
+				<tr>
+					<th>Usuario</th>
+					<th>
+						<span class="hidden-sm hidden-xs">Codigo plaza</span>
+						<span class="hidden-lg hidden-md">Plaza</span>
+					</th>
+					<th >
+						Objeto
+					</th>
+					<th>
+						<span class="visible-lg visible-md hidden-sm hidden-xs">Responsable</span>
+						<span class="hidden-lg hidden-md visible-sm hidden-xs">Resp.</span>
+						<span class="hidden-lg hidden-md hidden-sm visible-xs">R.</span>
+					</th>
+					<th>
+						<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite introducir datos?"> Lectura datos </span>
+						<span class="hidden-lg hidden-md visible-sm hidden-xs" title="¿Permite introducir datos?"> Lect. datos</span>
+						<span class="hidden-lg hidden-md hidden-sm visible-xs" title="¿Permite introducir datos?"> Lect.</span>
+					</th><th>
+						<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite introducir datos?"> Escribir datos </span>
+						<span class="hidden-lg hidden-md visible-sm hidden-xs" title="¿Permite introducir datos?"> Escr. datos </span>
+						<span class="hidden-lg hidden-md hidden-sm visible-xs" title="¿Permite introducir datos?"> Escr.</span>
+					</th><th>
+						<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite otorgar permisos?"> Dar permisos </span>
+						<span class="hidden-lg hidden-md visible-sm hidden-xs" title="¿Permite otorgar permisos?"> Permisos </span>
+						<span class="hidden-lg hidden-md hidden-sm visible-xs" title="¿Permite otorgar permisos?"> Perm.</span>					
+					</th>
+					<th></th>
+				</tr>
+			</thead>
+
+			<tbody ng-if="permisos.length || procedimientos.length " >				
+		
+				<tr ng-repeat="permiso in permisos" ng-if="permisos.length">
+					<td>{{permiso.login}}</td>
+					<td>{{permiso.codplaza}}</td>
+					<td>
+						<ul>
+							<li ng-repeat="idjerarquia in permiso.jerarquialectura" ng-init="j=getJerarquia(idjerarquia)">
+								{{j.nombre}}
+							</li>
+							<li ng-repeat="idjerarquia in permiso.jerarquiaescritura"  ng-init="j=getJerarquia(idjerarquia)">
+								{{j.nombre}}
+							</li>
+						<ul>
+					</td>
+					<td></td>
+					<td style="color:gray"><span class="glyphicon" ng-class="{'glyphicon-ok':isR(permiso),'glyphicon-remove':!isR(permiso)}"></span></td>
+					<td><a ng-click="changeW(permiso)" href=""><span class="glyphicon" ng-class="{'glyphicon-ok green':isW(permiso),'glyphicon-remove burdeos':!isW(permiso)}"></span></a></td>					
+					<td><a ng-click="changeP(permiso)" href="" ><span class="glyphicon" ng-class="{'glyphicon-ok green':isP(permiso),'glyphicon-remove burdeos':!isP(permiso)}"></span></a></td>					
+					<td>
+						<div class="btn-group pull-right">
+							<div class="btn btn-xs btn-default" title="Eliminar permiso">
+								<span class="glyphicon glyphicon glyphicon-remove" title="Eliminar del todo el permiso" ng-click="eliminarPermiso(permiso)"></span>
+							</div>	
+						</div>
+						<!--<div class="btn-group pull-right">
+							<div class="btn btn-xs btn-default" title="Editar permiso">
+								<span class="glyphicon glyphicon-edit" title="Editar el permiso"></span>
+							</div>	
+						<div>-->						
+					</td>
+				</tr>
+				<tr ng-repeat="procedimiento in procedimientos" class="responsable">
+					<td>
+						<span style="font-size:smaller" class="badge" ng-repeat="r in procedimiento.responsables" ng-if="procedimiento.responsables && procedimiento.cod_plaza" title="{{r.nombre}} {{r.apellidos}}">
+							{{r.login}} &nbsp;&nbsp;
+						</span>
+						<span style="font-size:smaller" class="badge alert-warning" ng-if="!procedimiento.responsables  && procedimiento.cod_plaza"><i>No disponible</i></span>
+					</td>
+					<td>{{procedimiento.cod_plaza}}</td>
+					<td><a href="/admin/procedimiento/{{procedimiento.codigo}}" title="{{procedimiento.codigo}}">[{{procedimiento.codigo}}] <span class="visible-lg visible-md">{{procedimiento.denominacion}}</span></a></td>
+					<td><span class="glyphicon glyphicon-ok gray"></span></td>
+					<td><span class="glyphicon glyphicon-ok gray"></span></td>
+					<td><span class="glyphicon glyphicon-ok gray"></span></td>					
+					<td><span class="glyphicon glyphicon-ok gray"></span></td>					
+					<td>
+						<div class="btn-group pull-right">
+							<div class="danger btn btn-xs btn-default" title="Eliminar permiso">
+								<span class="glyphicon glyphicon glyphicon-remove" title="Eliminar el permiso sobre el elemento de la estructura orgánica seleccionada" ng-click="eliminarResponable(procedimiento,r)"></span>
+							</div>	
+						<div>
+					</td>				
+				</tr>				
+			</tbody>			
 			<tfoot></tfoot>
 		</table>
 	</div>
+
 	<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" ng-if="!show_details_permiso">
+		<h2 class="center">Permisos</h2>
 		<table class="table table-striped table-bordered table-condensed table-hover">
 			<!--<caption>Permisos</caption>-->
 			<thead>
@@ -171,7 +258,7 @@
 					</th>
 				</tr>				
 				<tr ng-if="show_form_add_permiso">
-					<h2 class="center">Permisos</h2>
+					
 					<th colspan="{{ !is_show_recursive_users && !procedimientos.length? 7 : 8 }}" class="form-container">						
 						<form name="nuevousuario-form" id="nuevousuario-form" ng-init="usuarioseleccionado=''">
 								<input  class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 
