--- a/public/partials/permisoscrud2.html
+++ b/public/partials/permisoscrud2.html
@@ -1,13 +1,10 @@
-
-
-<div ng-controller="PermisoCtrl" class="row">
+<div ng-controller="PermisoCtrl2" class="row">
 <div id="superuser" ng-if="$root.permisoscalculados.grantoption || $root.permisoscalculados.superuser">
 	<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
 		<div class="panel panel-danger" ng-if="$root.permisoscalculados.superuser">
 			<div class="panel-heading">
 				<div class="input-group">
 				  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-				 <!-- <autocomplete class="form-control" ng-class="form-control" ng-model="persona_o_plaza" attr-placeholder="Buscar usuario por login o plaza..." click-activation="true" data="personas_plazas" on-select="showDetailsPermiso" ></autocomplete> 						-->
 					<input  class="form-control" ng-model="usuariosbuscado" typeahead-on-select="on_usuariobuscado_selected($item,$model,$label)" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 				 
 				</div>				
 			</div>
@@ -138,6 +135,7 @@
 			</div>
 		</div>
 	</div>
+	
 	<div ng-if="show_details_permiso" ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" >
 		<h2 class="center">Permisos</h2>
 		<table class="table table-striped table-bordered table-condensed table-hover">
@@ -186,7 +184,7 @@
 							<li ng-repeat="idjerarquia in permiso.jerarquiaescritura"  ng-init="j=getJerarquia(idjerarquia)">
 								{{j.nombre}}
 							</li>
-						<ul>
+						</ul>
 					</td>
 					<td></td>
 					<td style="color:gray"><span class="glyphicon" ng-class="{'glyphicon-ok':isR(permiso),'glyphicon-remove':!isR(permiso)}"></span></td>
@@ -202,7 +200,7 @@
 							<div class="btn btn-xs btn-default" title="Editar permiso">
 								<span class="glyphicon glyphicon-edit" title="Editar el permiso"></span>
 							</div>	
-						<div>-->						
+						</div>-->						
 					</td>
 				</tr>
 				<tr ng-repeat="procedimiento in procedimientos" class="responsable">
@@ -223,7 +221,7 @@
 							<div class="danger btn btn-xs btn-default" title="Eliminar permiso">
 								<span class="glyphicon glyphicon glyphicon-remove" title="Eliminar el permiso sobre el elemento de la estructura orgánica seleccionada" ng-click="eliminarResponable(procedimiento,r)"></span>
 							</div>	
-						<div>
+						</div>
 					</td>				
 				</tr>				
 			</tbody>			
@@ -261,7 +259,8 @@
 					
 					<th colspan="{{ !is_show_recursive_users && !procedimientos.length? 7 : 8 }}" class="form-container">						
 						<form name="nuevousuario-form" id="nuevousuario-form" ng-init="usuarioseleccionado=''">
-								<input  class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 							
+								<input  class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-lengt="3" typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)"  /> 
+							
 							<!--<br/>
 							<button type="button" class="btn btn-default" ng-click="crearnuevousuario()" ng-if="!is_nuevousuario">
 							  <span class="glyphicon glyphicon-search"></span> Nuevo usuario
@@ -309,13 +308,10 @@
 							<input type="hidden" name="nodojerarquia" value="{{seleccionado.id || 0}}" />
 							<input type="hidden" name="tiposeleccion" value="{{seleccionado_organica?'jerarquia':'procedimiento'}}" />		
 							<br/>							
-							<label for="permisoallogin" ng-if="!seleccionado_organica && procedimiento_seleccionado">
-								<input type="checkbox" ng-model="permisoallogin" name="permisoallogin" ng-disabled="!usuarioseleccionado" value="1"/> Asignar permiso al login y no a la plaza
-							</label>														
-							<div ng-if="$root.permisoscalculados.superuser">
+							<div ng-if="$root.permisoscalculados.superuser">							
 								<label for="propietario" ng-if="!seleccionado_organica && procedimiento_seleccionado">
 									<input type="checkbox" ng-model="propietario" name="propietario" ng-disabled="  !usuarioseleccionado " value="1"/> Es propietario del procedimiento
-								</label>
+								</label>							
 								<br/>
 								<label for="grantoption">
 									<input type="checkbox" ng-model="grantoption" name="grantoption" ng-disabled=" !usuarioseleccionado || propietario" value="1"/> Puede conceder permisos
@@ -327,16 +323,14 @@
 								<br/>
 								<label for="p_superuser" ng-if="$root.permisoscalculados.superuser">
 									<input type="checkbox" ng-model="psuperuser" name="p_superuser" ng-disabled=" !usuarioseleccionado  || propietario" value="1" /> Superusuario
-								</label>
+								</label>							
 								<br class="clear"/>
-
-								<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="crearpermiso(usuarioseleccionado)" ><span class="glyphicon glyphicon-ok"></span> <span>Crear</span></button>
+								
+								<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="crearpermiso(usuarioseleccionado)" ><span class="glyphicon glyphicon-ok"></span> <span>Crear</span></button>									
 								 &nbsp;<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" ><span class="glyphicon glyphicon-share"></span> <span>Delegar permisos</span></button>	
 							</div>
 							<div ng-if="!$root.permisoscalculados.superuser">
-								&nbsp;<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" >
-									<span class="glyphicon glyphicon-share"></span> <span>Delegar permisos</span>
-								</button>
+								&nbsp;<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" ><span class="glyphicon glyphicon-share"></span> <span>Delegar permisos</span></button>	
 							</div>
 						</form>
 					</th>
@@ -401,7 +395,7 @@
 							<div class="btn btn-xs btn-default" title="Editar permiso">
 								<span class="glyphicon glyphicon-edit" title="Editar el permiso"></span>
 							</div>	
-						<div>-->						
+						</div>-->						
 					</td>
 				</tr>
 				<tr ng-repeat="procedimiento in procedimientos" class="responsable">
@@ -422,7 +416,7 @@
 							<div class="danger btn btn-xs btn-default" title="Eliminar permiso">
 								<span class="glyphicon glyphicon glyphicon-remove" title="Eliminar el permiso sobre el elemento de la estructura orgánica seleccionada" ng-click="eliminarResponable(procedimiento,r)"></span>
 							</div>	
-						<div>
+						</div>
 					</td>				
 				</tr>				
 			</tbody>
