--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -15,29 +15,29 @@
 					<a href="/actividad/{{ancestro.id}}">{{ancestro.nombrelargo}}</a>
 				</li>
 				<li class="active">{{procedimientoSeleccionado.denominacion}}</li>
-				<li class="active">{{anualidad}}</li>
+				<li class="active">{{anualidad.substring(1,5)}}</li>
 			</ol>
 			<nav>
 			  <ul class="pager" ng-if="procedimientoSeleccionado.periodos[anualidad]" >	
-				<li ng-if="!!procedimientoSeleccionado.periodos[getPrev()]" class="previous" ><a ng-click="prevYear()" href="" ><span aria-hidden="true">&larr;</span> {{getPrev()}}</a></li>
-				<li ng-if="!!procedimientoSeleccionado.periodos[getNext()]" class="next" ><a ng-click="nextYear()" href="" >{{getNext()}} <span aria-hidden="true">&rarr;</span></a></li>
+				<li ng-if="!!procedimientoSeleccionado.periodos['a'+getPrev()]" class="previous" ><a ng-click="prevYear()" href="" ><span aria-hidden="true">&larr;</span> {{getPrev()}}</a></li>
+				<li ng-if="!!procedimientoSeleccionado.periodos['a'+getNext()]" class="next" ><a ng-click="nextYear()" href="" >{{getNext()}} <span aria-hidden="true">&rarr;</span></a></li>
 			  </ul>
 			</nav>
 
 			<div class="col-lg-6">
 				<ul>
-					<li ng-repeat="attr in attrspar">
+					<li ng-repeat="attr in attrspar" >
 						<strong>{{attr| translate}}</strong>
 						<span>&nbsp;</span>
 						<a ng-if="$root.permisoscalculados.superuser" href="#" onaftersave="recalculate()" editable-text="procedimientoSeleccionado[attr]">{{procedimientoSeleccionado[attr]!=null ?procedimientoSeleccionado[attr] : '-' }}</a>
 						<span ng-if="!$root.permisoscalculados.superuser" >{{ procedimientoSeleccionado[attr]!=null ?procedimientoSeleccionado[attr]  : '-' }}</span>
 					</li>
-					<li ng-repeat="attr in attrsanualidad" ng-show="exists(attr)">
+					<li ng-repeat="(index,attr) in attrsanualidad" ng-show="exists(attr)">
 						<div >
 							<strong>{{attr| translate}}</strong>
 							<span>&nbsp;</span>
-							<a href="#" ng-if="W" onaftersave="recalculate()"  editable-text="procedimientoSeleccionado.periodos[anualidad][attr]">{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] :  '-' }}</a>
-							<span ng-if="!W" >{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] : '-' }}</span>
+							<a  title="edita este valor"  href="#" ng-if="W && attrsanualidad_permisos[index]!='s' ||  $root.permisoscalculados.superuser " onaftersave="recalculate()"  editable-text="procedimientoSeleccionado.periodos[anualidad][attr]">{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] :  '-' }}</a>
+							<span ng-if="!(W && attrsanualidad_permisos[index]!='s' ||  $root.permisoscalculados.superuser)" >{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] : '-' }}</span>
 						</div>
 					</li>
 				</ul>
@@ -94,8 +94,8 @@
 			<div style="clear:both" class="table-responsive">
 			<nav>
 			  <ul class="pager" ng-if="procedimientoSeleccionado.periodos[anualidad]" >	
-				<li ng-if="!!procedimientoSeleccionado.periodos[getPrev()]" class="previous" ><a ng-click="prevYear()" href="" ><span aria-hidden="true">&larr;</span> {{getPrev()}}</a></li>
-				<li ng-if="!!procedimientoSeleccionado.periodos[getNext()]" class="next" ><a ng-click="nextYear()" href="" >{{getNext()}} <span aria-hidden="true">&rarr;</span></a></li>
+				<li ng-if="!!procedimientoSeleccionado.periodos['a'+getPrev()]" class="previous" ><a ng-click="prevYear()" href="" ><span aria-hidden="true">&larr;</span> {{getPrev()}}</a></li>
+				<li ng-if="!!procedimientoSeleccionado.periodos['a'+getNext()]" class="next" ><a ng-click="nextYear()" href="" >{{getNext()}} <span aria-hidden="true">&rarr;</span></a></li>
 			  </ul>
 			</nav>
 				<table class="table table-striped table-bordered">
@@ -117,8 +117,16 @@
 							</td>
 						</tr>
 						<tr ng-repeat="attr in attrstablacalculados" ng-show="exists(attr)"> 
-							<th>{{attr | translate}}</th>
-							<td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" ng-class="{'text-danger': val&lt;0 }" class="numberCell">{{val | numberFormat}}</td>
+							<th>{{attr | translate}}</th>							
+							<td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" ng-class="{'text-danger': val&lt;0 }" class="numberCell">
+								<span ng-if="anualidad!=a2013 || (!W && !$root.permisoscalculados.superuser) || procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index]">
+									{{val | numberFormat}} 
+								</span>								
+								<span ng-if="anualidad==a2013 && (W || $root.permisoscalculados.superuser) && !procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index]" editable-text="procedimientoSeleccionado.periodos[anualidad][attr][$index]" onaftersave="recalculate()" onbeforesave="checkNumber($data)">
+									{{val | numberFormat}}
+								</span>								
+							</td>
+
 						</tr>
 					</tbody>
 				</table>
@@ -168,7 +176,7 @@
 						<svg>
 						</svg>
 					</nvd3-multi-bar-chart>
-				</div>
+				</div>				
 				<div ng-repeat="graph in graphs" ng-if="!graficasbarras &amp;&amp; graph.data &amp;&amp; graficasgrandes" style="clear:both" class="col-lg-12 well">
 					<h5 class="text-danger text-center">{{graph.caption}}</h5>
 					<nvd3-line-chart previous="nvd3-multi-bar-chart" noData="No hay datos que mostrar" data="graph.data" showXAxis="true" showYAxis="true" showLegend="true" interactive="true" height="350" xAxisTickValues="xAxisTickValuesFunction()" xAxisTickFormat="xAxisTickFormatFunction()" rotateLabels="45" forcey="graph.forcey">
