Error de denominación en portada

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -26,6 +26,6 @@
 		<p style="text-align:center" ng-if="mensaje" class="alert alert-danger">{{mensaje}}</p>
 	</div>
 	<div style="position:absolute; bottom:1em;right:1em; width:350px; height:350px;{{imagen}};background-repeat:no-repeat; background-size:contain; background-position:center center"></div>
-	<h3>Guía de Procedimientos y Servicios</h3>
+	<h3>Sistema Integrado de Control de Indicadores</h3>
 </div>
 <div style="clear:both"></div>
