Error anualidad anualidad=='a2013'

--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -119,10 +119,10 @@
 						<tr ng-repeat="attr in attrstablacalculados" ng-show="exists(attr)"> 
 							<th>{{attr | translate}}</th>							
 							<td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" ng-class="{'text-danger': val&lt;0 }" class="numberCell">
-								<span ng-if="anualidad!=a2013 || (!W && !$root.permisoscalculados.superuser) || procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index]">
+								<span ng-if="anualidad!='a2013' || (!W && !$root.permisoscalculados.superuser) || procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index]">
 									{{val | numberFormat}} 
 								</span>								
-								<span ng-if="anualidad==a2013 && (W || $root.permisoscalculados.superuser) && !procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index]" editable-text="procedimientoSeleccionado.periodos[anualidad][attr][$index]" onaftersave="recalculate()" onbeforesave="checkNumber($data)">
+								<span ng-if="anualidad=='a2013' && (W || $root.permisoscalculados.superuser) && !procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index]" editable-text="procedimientoSeleccionado.periodos[anualidad][attr][$index]" onaftersave="recalculate()" onbeforesave="checkNumber($data)">
 									{{val | numberFormat}}
 								</span>								
 							</td>
