--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -24,6 +24,15 @@
 
 		</div>
 		<p style="text-align:center" ng-if="mensaje" class="alert alert-danger">{{mensaje}}</p>
+		<!--[if lt IE 9]>
+		<p style="margin-top:1em;">
+			Para un funcionamiento más fluido de esta web y de muchas otras, podrías considerar actualizar tu navegador o mejor,
+			cambiar a uno que respete los estándares web, como por ejemplo, <a target="_blank" href="https://www.google.es/chrome/browser/index.html">Chrome</a> o
+			<a target="_blank" href="http://getfirefox.com">Firefox</a>.
+			Si prefieres aún más alternativas puedes elegir aquí:
+			<a target="_blank" href="http://browsehappy.com/">http://browsehappy.com/</a>
+		</p>
+		<![endif]-->
 	</div>
 	<div style="position:absolute; bottom:1em;right:1em; width:350px; height:350px;{{imagen}};background-repeat:no-repeat; background-size:contain; background-position:center center"></div>
 	<h3>Sistema Integrado de Control de Indicadores</h3>
