Paginación en actividad

--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -142,7 +142,7 @@
 					</tr>
 				</tfoot>
 				<tbody>
-					<tr ng-repeat="proc in procedimientosfiltrados |filter:filtrotxtprocedimiento | orderBy : orderby : reverse">
+					<tr ng-repeat="proc in procedimientosfiltrados |filter:filtrotxtprocedimiento | orderBy : orderby : reverse | pagination : currentPage*itemsPerPage | limitTo: itemsPerPage">
 						<td class="text-center"><span class="sparkline">{{proc.periodos[anualidad].solicitados | json}}</span></td>
 						<th class="text-center">{{proc.codigo}}</th>
 						<td><a href="/procedimiento/{{proc.codigo}}">{{proc.denominacion}}</a></td>
@@ -154,6 +154,21 @@
 				</tbody>
 			</table>
 
+			<div class="col-md-12 text-center" ng-If="pageCount()>0">
+				<div class="pagination-div">
+				 <ul class="pagination">
+				  <li ng-class="DisablePrevPage()">
+					  <span  ng-click="prevPage()">Anteriores</span>
+				  </li>
+				  <li ng-repeat="n in range()" ng-class="{active: n == currentPage}" ng-click="setPage(n)">
+					  <span >{{n+1}}</span>
+				  </li>
+				  <li ng-class="DisableNextPage()">
+					  <span ng-click="nextPage()">Siguientes</span>
+				  </li>
+				 </ul>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
